FIxed font size issue and cancel button alignment issue

--- a/src/styles/_addresscard.style.scss
+++ b/src/styles/_addresscard.style.scss
@@ -13,7 +13,7 @@
     border-radius: 10px;
     width: 70dvw;
     gap: 10px;
-    font-family: "Poppins";
+    font-family: "Poppins" !important;
 
     .header {
         font-size: 2rem;
