--- a/src/styles/_cartpage.style.scss
+++ b/src/styles/_cartpage.style.scss
@@ -21,7 +21,7 @@
     border:none;
     background-color: transparent;
     font-size: 1rem;
-    color: green;
+    color:black;
 }
 .no-item-cart{
     font-size: 0.8rem;
@@ -30,7 +30,9 @@
     padding: 10px 40px;
 }
 .back-btn:hover{
-    transform: scale(1.2);
+    transition: all 0.5s linear;
+    transform: scale(1.05);
+    color: orange;
 }
 .back-btn::before{
     content: "<  ";
