--- a/src/styles/_orderpage.style.scss
+++ b/src/styles/_orderpage.style.scss
@@ -2,6 +2,7 @@
 
 .orderpage-main{
     padding: max(30px , 1%);
+    font-family: "Poppins";
 }
 
 .placed{
@@ -37,6 +38,7 @@
         display: flex;
         flex-direction: column;
         justify-content: center;
+        align-items: end;
         gap: 30px;
 
  
