--- a/src/styles/_paymentmethod.style.scss
+++ b/src/styles/_paymentmethod.style.scss
@@ -3,6 +3,8 @@
 .payment-container{
     border: 1px solid black;
     padding: 0px 20px 20px;
+    font-family: "Poppins";
+
 
 
     h1{
@@ -18,5 +20,6 @@
     display: flex;
     flex-direction: column;
     gap: 10px;
+
 
 }
